# ray_tracer_challenge

./: Cargo.toml
src/: camera.rs  canvas.rs  intersections.rs  lib.rs  lights.rs  material.rs  materials.rs  matrices.rs  patterns.rs  rays.rs  spheres.rs  transformations.rs  tuples.rs  world.rs
src/patterns/: checkers.rs  gradients.rs  mod.rs  rings.rs  stripe_pattern.rs  stripes.rs
src/shapes/: mod.rs  planes.rs  spheres.rs
