[package]
name = "ray_tracer_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", optional = true, features = ["derive"] }

[features]
build-binary = ["clap"]

[[bin]]
name = "render"
required-features = ["build-binary"]

